--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <p class="product-page-price">
                             R3,290<sup></sup>
                         </p>
-                        <p class="was-price">Was R3,990.00 – Save 18%</p>
+                        <span style="font-weight: bold;color: white;background-color: var(--success-color);padding: 4px 8px;border-radius: 0px;text-decoration: none;">Save 18%</span>
                     </div>
                     
                     <div class="product-code">
@@ -294,4 +294,5 @@
 
     <script src="scriptz.js"></script>
 </body>
+
 </html>
