--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@
                         <p class="product-page-price">
                             R3,290<sup></sup>
                         </p>
-                        <span style="font-weight: bold;color: white;background-color: var(--success-color);padding: 4px 8px;border-radius: 0px;text-decoration: none;">Save 18%</span>
+                        <p style="font-family: 'Rubik', sans-serif;">
+  <span style="text-decoration: line-through;">Was R3,990.00</span> – 
+  <span style="font-weight: bold; color: white; background-color: red; padding: 4px 8px; border-radius: 12px; text-decoration: none;">Save 18%</span>
+</p>
                     </div>
                     
                     <div class="product-code">
@@ -296,3 +299,4 @@
 </body>
 
 </html>
+
