--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </p>
                         <p style="font-family: 'Rubik', sans-serif;">
   <span style="text-decoration: line-through;">Was R3,990.00</span> – 
-  <span style="font-weight: bold; color: white; background-color: red; padding: 4px 8px; border-radius: 12px; text-decoration: none;">Save 18%</span>
+  <span style="font-weight: bold; color: white; background-color: #059669; padding: 4px 8px; border-radius: 0px; text-decoration: none;">Save 18%</span>
 </p>
                     </div>
                     
@@ -299,4 +299,5 @@
 </body>
 
 </html>
+
 
