--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>z
     </div>
-
+    <div class="backdrop"></div>
     <footer>
         <div class="container">
             <p>&copy; 2025 MORSØ. Premium Fireplaces, Kitchen & Outdoor Lifestyle. All rights reserved.</p>
@@ -316,6 +316,7 @@
 </body>
 
 </html>
+
 
 
 
