--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         </p>
                         <p style="font-family: 'Rubik', sans-serif;">
   <span style="text-decoration: line-through;">Was R3,990.00</span> – 
-  <span style="font-weight: bold; color: white; background-color: #059669; padding: 4px 8px; border-radius: 0px; text-decoration: none;">Save 18%</span>
+  <span style="font-weight: bold; color: white; background-color: #623f08; padding: 4px 8px; border-radius: 0px; text-decoration: none;">Save 18%</span>
 </p>
                     </div>
                     
@@ -316,6 +316,7 @@
 </body>
 
 </html>
+
 
 
 
