--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
 
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 0.5rem;">
                         <button class="button button--secondary">
-                            <i class="fa-solid fa-gift"></i>
-                            Add to Registry
-                        </button>
-                        <button class="button button--secondary">
                             <i class="fas fa-heart"></i>
                             Add to Wish List
+                        </button>
+                        <button class="button button--secondary">
+                            <i class="fa-solid fa-share"></i>
+                            Share
                         </button>
                     </div>
 
@@ -316,6 +316,7 @@
 </body>
 
 </html>
+
 
 
 
